# fastping

./: Cargo.toml  LICENSE  README.md  README.ru.md
nagios/: check_fastping  fastping-passive.sh
src/: lib.rs
zabbix/: fastping.conf  fastping.service  fastping.timer  template.md  zbx-hosts.sh
